--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                     </div>
                     <!--Google Map Start-->
                     <div class="google-map">
-                            <div id="map" data-latitude="-37.817214" data-longitude="144.955925" data-zoom="15"></div>
+                            <div id="map" data-latitude=" 50.528468820398366" data-longitude=" 8.651903859733439" data-zoom="15"></div>
                     </div>
                     <!--Google Map End-->
                 </section>
