--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="author" content="cosmos-themes" />
 
         <!--Page Title-->
-        <title>Watson - vCard / Resume/ CV Template</title>
+        <title>Audrane/Lebenslauf</title>
 
         <!--Plugins Css-->
         <link rel="stylesheet" href="css/plugins.css">
@@ -24,7 +24,7 @@
         <script src="js/modernizr.js"></script>
 
         <!--Favicons-->
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/3.1.ico" type="image/x-icon">
 
     </head>
 
@@ -55,7 +55,7 @@
                     <!--Mobile Header-->
                     <div class="header-mobile">
                         <a class="header-toggle"><i class="fas fa-bars"></i></a>
-                        <h2>Philip Watson</h2>
+                        <h2>Audrane Carelle Ngnindjeu</h2>
                     </div>
 
                     <!--Main Header-->
@@ -132,7 +132,7 @@
                         <!--Page Heading-->
                         <div class="page-heading">
                             <span class="icon"><i class="lnr lnr-user"></i></span>
-                            <h2>About Me.</h2>
+                            <h2>Über mich.</h2>
                         </div>
 
                         <!-- About Info Row Start-->
@@ -154,9 +154,9 @@
                                     <h3 class="mb-20">Persönliche Informationen</h3>
                                     <ul>
                                         <li><span class="title">Name</span><span class="value">Audrane Carelle Ngnindjeu</span></li>
-                                        <li><span class="title">Age</span><span class="value">23 Jahre alt</span></li>
-                                        <li><span class="title">Residence</span><span class="value"> 35440 Linden, Deutschland</span></li>
-                                        <li><span class="title">Addresse</span><span class="value">Goethestrasse 28 </span></li>
+                                        <li><span class="title">Alter</span><span class="value">23 Jahre alt</span></li>
+                                        <li><span class="title">Plz, Ort</span><span class="value"> 35440, Linden Deutschland</span></li>
+                                        <li><span class="title">Straße</span><span class="value">Goethestrasse 28 </span></li>
                                         <li><span class="title">Email</span><span class="value">ngnindjeuaudrane@yahoo.fr</span></li>
                                         <li><span class="title">Telefonnummer</span><span class="value">0049 17635613292</span></li>
                                         <li><span class="title">Github</span><a class="value">https://github.com/Audrane</a></li>
@@ -189,7 +189,7 @@
                             <!--Experience Column Start-->
                             <div class="col-lg-6">
                                 <div class="subheading">
-                                    <h3>Experience</h3>
+                                    <h3>Erfahrung</h3>
                                 </div>
                                 <ul class="experience">
 
@@ -964,6 +964,7 @@
                     </div>
                     <!--Google Map Start-->
                     <div class="google-map">
+
                             <div id="map" data-latitude=" 50.528468820398366" data-longitude=" 8.651903859733439" data-zoom="15"></div>
                     </div>
                     <!--Google Map End-->
